# example_auth

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml
src/: main.py
src/api/v1/: __init__.py  auth.py  companies.py  profiles.py  users.py
src/core/: constants.py  route_classes.py
src/core/config/: __init__.py  auth_jwt_settings.py  auth_settings.py  dadata_settings.py  email_settings.py  pg_settings.py  redis_settings.py
src/db/: postgresql.py  redis.py
src/models/: __init__.py  base_mixins.py  company.py  kladr.py  user.py  work_days.py
src/models/migrations/: alembic.ini  env.py
src/models/migrations/versions/: 170a479a518b_add_city_model.py  45c793af1258_add_city_to_profile_and_companybranch_.py  63e5be69baaa_init_tables.py  8354bb4fbbff_init_partitions.py  aa469d6bc33f_init_schema.py  e7b11896ad60_update_logined_at_field_usersingin_model.py
src/schemas/: __init__.py  base.py  company.py  user.py
src/services/: cache.py  email.py
src/services/crud/: __init__.py  cities.py  companies.py  profiles.py  users.py
src/templates/: verification.html
src/utils/: db.py  users.py
