[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Yulia Mikhaylova <ymikhaylova@innoseti.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
fastapi = "^0.114.0"
pydantic = "^2.9.1"
orjson = "^3.10.7"
uvicorn = {version = "^0.30.6", extras = ["standard"]}
gunicorn = "^23.0.0"
python-multipart = "^0.0.9"
structlog = "^24.4.0"
asgi-correlation-id = "^4.3.3"
httpx = "^0.27.2"
alembic-postgresql-enum = "^1.3.0"
pydantic-settings = "2.4.0"
async-fastapi-jwt-auth = "^0.6.6"
redis = "^5.0.8"
jinja2 = "^3.1.4"
fastapi-mail = {version = "^1.4.1", extras = ["aioredis"]}
pytz = "^2024.1"
dadata = "^21.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
